[package]
name = "virtualhere-auth-plugin"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
license = "GPLv3"
description = "Authentication plugin for virtualhere server"
homepage = "https://github.com/ph0llux/virtualhere_auth_plugin"
repository = "https://github.com/ph0llux/virtualhere_auth_plugin"
keywords = ["security", "virtualhere"]
categories = ["command-line-utilities"]

[[bin]]
name = "virtualhere-auth-plugin"
path = "src/main.rs"
test = true
bench = true

[dependencies]
rust-argon2 = "2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.8"
hex = "0.4.3"
clap = { version = "4.2.7", features = [ "derive" ] }
log = "0.4.6"
env_logger = "0.9.0"
rand = "0.8.5"

[profile.release]
lto = true				# enables link time optimization
panic = 'unwind'		# unwinds the stack if panic
debug = false			# I won't see any debug options in release mode.
opt-level = 2  			# optimized for performance.
codegen-units = 1		# Set to 1 to allow for maximum size reduction optimizations - at the expense of the compile time.#   
